[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Fisherman-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.587
margin_right = 109.413
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -614.37
margin_top = -103.461
margin_right = 607.825
margin_bottom = 83.5386
custom_fonts/font = SubResource( 2 )
text = "A PORPOISE'S PURPOSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -107.0
margin_top = -109.0
margin_right = 107.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
